# aeon-bot

./: .env.example  .gitignore  Cargo.toml  README.md  start.sh
db/: db.sql
docs/: COMMANDS.md
src/: commands.rs  events.rs  main.rs
src/games/: cards.rs  lib.rs  mod.rs
src/games/bj/: commands.rs  interactions.rs  mod.rs
src/games/ttt/: board.rs  commands.rs  interactions.rs  mod.rs  qlearning.rs
