[package]
name = "aeon-bot"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
rand = "0.8"
chrono = { version = "0.4.42", features = ["serde"] }
poise = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serenity = { version = "0.12.4", features = ["client", "gateway", "rustls_backend", "model", "cache"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono", "runtime-tokio-rustls"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
